# nkb-classification

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coco8.yaml  eval.py  inference.py  pyproject.toml  save_augs.py  setup.py  train.py
Precision-Recall/: PR.py  active.sh  confusion.py  plots.ipynb
Precision-Recall/csv/resnet26t/: results_nms0.2_iou0.1_conf0.05.csv
Precision-Recall/yml/: 8august.yml
configs/: comet_api_key.txt  config.py  eval_config.py  inference_config.py  multitask_config.py  singletask_config.py  singletask_on_yolo_crops_config.py  trtconfig.py  yolo_dataset_config.yaml
configs/archive/color_mappings/: color_mapping_v1.py
configs/archive/old/dog_breed/: efb2_augs_baseline_224.py  mobnetv3_large_augs_baseline_224.py
configs/archive/old/dog_breed/breed_dicts/: breed_groups.py  stanford.pkl
configs/archive/old/dog_breed/inference/: cam_dogs_224.py  efb2_ud_augs_baseline_512.yml  mobnetv3_large_baseline_512.py  mobnetv3_large_baseline_512.yml
configs/archive/old/merged_dataset_stratification/: mobnetv3_large_augs_strat_video_split_v1.py  mobnetv3_large_dog_color_augs_high_res_strat_video_split_v1.py  mobnetv3_large_dog_color_augs_high_res_strat_video_split_v2.py  mobnetv3_large_dog_color_augs_high_res_strat_video_split_v3.py  mobnetv3_large_dog_color_augs_strat_video_split_v1.py  mobnetv3_large_dog_color_augs_strat_video_split_v2.py  mobnetv3_large_dog_color_merged_classes_augs_high_res_strat_video_split_v1.py  mobnetv3_large_dog_color_strat_video_split_v1.py  mobnetv3_large_dog_ear_type_augs_strat_video_split_v1.py  mobnetv3_large_dog_fur_augs_strat_video_split_v1.py  mobnetv3_large_dog_leg_len_augs_strat_video_split_v1.py  mobnetv3_large_dog_muzzle_len_augs_high_res_strat_video_split_v1.py  mobnetv3_large_dog_muzzle_len_augs_high_res_strat_video_split_v2.py  mobnetv3_large_dog_muzzle_len_augs_strat_video_split_v1.py  mobnetv3_large_dog_muzzle_len_augs_strat_video_split_v2.py  mobnetv3_large_dog_muzzle_len_augs_strat_video_split_v3.py  mobnetv3_large_dog_size_augs_high_res_strat_video_split_v1.py  mobnetv3_large_dog_size_augs_strat_video_split_v1.py
configs/digit_classification/: ef_net_b4_augs_224.yml  mobnetv3_large_augsv1_224.yml  resnet34_augs_224.yml  resnet34_augs_512.yml  resnet34_sampling_augs_224.yml  resnet34_sampling_augsv1_224_pretrained.yml  resnet34_weighted_augs_224.yml  resnet50_weighted_augs_224.yml  vit_small_initial.yml  vit_small_wd.yml  vit_small_wd_from_scratch.yml
configs/digit_rotation/: ef_net_b4_augs_224.yml  efb2_ud_augs_baseline_224.yml  efb2_ud_augs_baseline_512.yml  mobnetv3_large_augsv0_224.yml  mobnetv3_large_augsv0_320.yml  mobnetv3_large_augsv0_512.yml  resnet18_sampling_augsv0_224.yml  resnet34_sampling_augsv0_224.yml
configs/dog_breed/breed_dicts/: tsinghua.pkl
configs/dog_breed/inference/: efb2_ud_augs_baseline_512.yml
configs/merged_dataset_stratification/: mobnetv3_large_dog_color_augs_high_res_strat_video_split_v2.py  mobnetv3_large_dog_color_augs_high_res_strat_video_split_v3.py
configs/old/dog_breed/: efb2_augs_baseline_224.py  mobnetv3_large_augs_baseline_224.py
configs/old/dog_breed/inference/: cam_dogs_224.py  mobnetv3_large_baseline_512.py
configs/old/merged_dataset_stratification/: mobnetv3_large_augs_strat_video_split_v1.py  mobnetv3_large_dog_color_augs_strat_video_split_v1.py  mobnetv3_large_dog_color_merged_classes_augs_high_res_strat_video_split_v1.py  mobnetv3_large_dog_color_strat_video_split_v1.py  mobnetv3_large_dog_ear_type_augs_strat_video_split_v1.py  mobnetv3_large_dog_fur_augs_strat_video_split_v1.py  mobnetv3_large_dog_leg_len_augs_strat_video_split_v1.py  mobnetv3_large_dog_muzzle_len_augs_high_res_strat_video_split_v1.py  mobnetv3_large_dog_muzzle_len_augs_high_res_strat_video_split_v2.py  mobnetv3_large_dog_muzzle_len_augs_strat_video_split_v2.py  mobnetv3_large_dog_size_augs_high_res_strat_video_split_v1.py
configs/vagons/: efb2_ud_augs_baseline_512.py  efb2_ud_augs_baseline_512.yml  mobnetv3_large_baseline_512.yml
configs/vagons/inference/: mobnetv3_large_baseline_512.yml
metrics/: det_cls_val.py
nkb_classification/: dataset.py  engine.py  export.py  inference.py  logging.py  losses.py  metrics.py  model.py  train  train.py  train.sh  trtmodule.py  utils.py
requirements/: main.txt  optional.txt
src/classification/: dataset.py  inference.py  train.py  utils.py
